--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "chromadb>=1.3.4",
+    "docx2txt>=0.9",
     "faiss-cpu>=1.12.0",
     "fastapi>=0.121.0",
     "ipykernel>=7.1.0",
@@ -18,8 +19,10 @@ dependencies = [
     "langserve>=0.3.3",
     "pydantic>=2.12.4",
     "pymupdf>=1.26.6",
+    "pypdf>=6.1.3",
     "python-dotenv>=1.2.1",
     "sentence-transformers>=5.1.2",
     "streamlit>=1.51.0",
+    "unstructured>=0.18.18",
     "uvicorn>=0.38.0",
 ]
