--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "langchain>=1.0.4",
     "langchain-chroma>=1.0.0",
     "langchain-community>=0.4.1",
+    "langchain-groq>=1.0.0",
     "langchain-huggingface>=1.0.1",
     "langchain-openai>=1.0.2",
     "langchain-text-splitters>=1.0.0",
